@@ -277,6 +277,7 @@ GV*titleLabel.Label:			Show Title
 GV*pixmap.Label:			Backing Pixmap
 GV*size.Label:				Automatic resizing
 GV*watch.Label:				Watch File
+GV*infoVerboseLabel.Label:			info Popup
 GV*optionsgv.Label:			gv Options ...
 GV*optionsfs.Label:			File Selection Options ...
 GV*optionsgs.Label:			Ghostscript Options ...
