@@ -103,6 +103,7 @@ DECLARE_STRING(gsArguments)
 DECLARE_STRING(gsSafer)
 DECLARE_STRING(gsQuiet)
 
+DECLARE_STRING(infoVerbose)
 DECLARE_STRING(autoCenter)
 DECLARE_STRING(scale)
 DECLARE_STRING(scaleBase)
