@@ -240,7 +240,7 @@ resource_buildDatabase (
   if (infoverbose_p != -1)
     {
       if (infoverbose_p == 0) resource_putResource (&db, app_name, ".infoVerbose", "Silent");
-      if (infoverbose_p == 1) resource_putResource (&db, app_name, ".infoVerbose", "Warnings");
+      if (infoverbose_p == 1) resource_putResource (&db, app_name, ".infoVerbose", "Errors");
       if (infoverbose_p == 2) resource_putResource (&db, app_name, ".infoVerbose", "All");
     }
   if (monochrome_p)
